--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build-apk": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.0",
