--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "khoroch",
   "main": "expo-router/entry",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -17,6 +17,7 @@
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "^14.0.8",
     "expo-file-system": "^19.0.16",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
