--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-notifications": "^0.32.12",
     "expo-print": "^15.0.8",
     "expo-router": "~6.0.10",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~3.0.8",
